<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/informacion"
            android:title="@string/informacion"
            android:icon="@drawable/ic_menu_manage"
            android:text="@string/informacion"
            android:textSize="14sp"/>

        <item
            android:id="@+id/acerca"


            android:title="@string/textView7"
            android:text="@string/acerca"
            android:icon="@drawable/ic_menu_slideshow"
            android:textSize="14sp" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/contacto"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/common_open_on_phone"
                android:text="@string/contacto"
                android:textSize="14sp"/>
        </menu>
    </item>

</menu>
